# Weaver

./: .gitignore  CMakeLists.txt  main.cpp
.cursor/rules/: cpp.mdc
user_interface/: CMakeLists.txt
user_interface/core/: Element.cpp  Element.h  Manager.cpp  Manager.h
user_interface/database/: Database.cpp  Database.h
user_interface/factory/: ElementFactory.h  ImGuiFactory.cpp  ImGuiFactory.h
user_interface/internal/base/widget/: IButton.h  IWidget.h
user_interface/internal/base/window/: IWindow.h
user_interface/internal/imGui/widget/: ImGuiButton.cpp  ImGuiButton.h
user_interface/internal/imGui/window/: ImGuiWindow.cpp  ImGuiWindow.h
user_interface/widget/: Button.cpp  Button.h
user_interface/window/: Window.cpp  Window.h
